clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_5.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/va-arg-5.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn va_double(%arg1: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %39 = alloca s32i, "n", align 4
        %40 = alloca rec___va_list_tag[1], "args", align 16
        store %arg1, %39
        %41 = cast(array_to_ptrdecay) %40 : rec___va_list_tag*
        va_start
        scope {
                %58 = cast(array_to_ptrdecay) %40 : rec___va_list_tag*
                va_arg
                %60 = const 3.1415920000000002 : double
                cmp
                if %61 {
                        %62 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %53 = cast(array_to_ptrdecay) %40 : rec___va_list_tag*
                va_arg
                %55 = const 2.718270e+00 : double
                cmp
                if %56 {
                        %57 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %48 = cast(array_to_ptrdecay) %40 : rec___va_list_tag*
                va_arg
                %50 = const 2.2360679000000001 : double
                cmp
                if %51 {
                        %52 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %43 = cast(array_to_ptrdecay) %40 : rec___va_list_tag*
                va_arg
                %45 = const 2.1474836000000002 : double
                cmp
                if %46 {
                        %47 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %42 = cast(array_to_ptrdecay) %40 : rec___va_list_tag*
        va_end
        return
}
fn va_long_double(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %15 = alloca s32i, "n", align 4
        %16 = alloca rec___va_list_tag[1], "args", align 16
        store %arg0, %15
        %17 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        va_start
        scope {
                %34 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
                va_arg
                %36 = const 3.14159199999999999998 : long_double<f80>
                cmp
                if %37 {
                        %38 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %29 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
                va_arg
                %31 = const 2.718270e+00 : long_double<f80>
                cmp
                if %32 {
                        %33 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %24 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
                va_arg
                %26 = const 2.2360679 : long_double<f80>
                cmp
                if %27 {
                        %28 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %19 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
                va_arg
                %21 = const 2.14748360000000000007 : long_double<f80>
                cmp
                if %22 {
                        %23 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %18 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        va_end
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 4 : s32i
        %3 = const 3.1415920000000002 : double
        %4 = const 2.718270e+00 : double
        %5 = const 2.2360679000000001 : double
        %6 = const 2.1474836000000002 : double
        call @va_double(%2, %3, %4, %5, %6) [all]
        %7 = const 4 : s32i
        %8 = const 3.14159199999999999998 : long_double<f80>
        %9 = const 2.718270e+00 : long_double<f80>
        %10 = const 2.2360679 : long_double<f80>
        %11 = const 2.14748360000000000007 : long_double<f80>
        call @va_long_double(%7, %8, %9, %10, %11) [all]
        %12 = get_global @exit : (s32i) -> void*
        %13 = const 0 : s32i
        call @exit(%13) [all]
        %14 = load %0 : s32i
        return %14
}
