clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__vfprintf_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/vfprintf-1.c" (c, x86_64-unknown-linux-gnu)
global stdout : rec__IO_FILE* [external, default, align 8, dso_local]
global .str : s8i[6] = "hello" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "hello\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[2] = "a" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[1] = zero [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[3] = "%s" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[3] = "%c" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[4] = "%s\n" [cir_private, default, align 1, dso_local, constant]
global .str.7 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn vfprintf(%arg0: rec__IO_FILE*, %arg1: s8i*, %arg2: rec___va_list_tag*) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn inner(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %27 = alloca s32i, "x", align 4
        %28 = alloca rec___va_list_tag[1], "ap", align 16
        %29 = alloca rec___va_list_tag[1], "ap2", align 16
        store %arg0, %27
        %30 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
        va_start %30
        %31 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_start %31
        scope {
            %34 = load %27 : s32i, align 4
            switch %34 {
                case equal 0 {
                    %206 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %207 = get_global @stdout : rec__IO_FILE**
                    %208 = load %207 : rec__IO_FILE*, align 8
                    %209 = get_global @.str : s8i[6]*
                    %210 = cast(array_to_ptrdecay) %209 : s8i*
                    %211 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %212 = call @vfprintf(%208, %210, %211) : s32i [all]
                    scope {
                        %213 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %214 = get_global @stdout : rec__IO_FILE**
                        %215 = load %214 : rec__IO_FILE*, align 8
                        %216 = get_global @.str : s8i[6]*
                        %217 = cast(array_to_ptrdecay) %216 : s8i*
                        %218 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %219 = call @vfprintf(%215, %217, %218) : s32i [all]
                        %220 = const 5 : s32i
                        %221 = cmp ne %219, %220 : bool
                        if %221 {
                            %222 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 1 {
                    %189 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %190 = get_global @stdout : rec__IO_FILE**
                    %191 = load %190 : rec__IO_FILE*, align 8
                    %192 = get_global @.str.1 : s8i[7]*
                    %193 = cast(array_to_ptrdecay) %192 : s8i*
                    %194 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %195 = call @vfprintf(%191, %193, %194) : s32i [all]
                    scope {
                        %196 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %197 = get_global @stdout : rec__IO_FILE**
                        %198 = load %197 : rec__IO_FILE*, align 8
                        %199 = get_global @.str.1 : s8i[7]*
                        %200 = cast(array_to_ptrdecay) %199 : s8i*
                        %201 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %202 = call @vfprintf(%198, %200, %201) : s32i [all]
                        %203 = const 6 : s32i
                        %204 = cmp ne %202, %203 : bool
                        if %204 {
                            %205 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 2 {
                    %172 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %173 = get_global @stdout : rec__IO_FILE**
                    %174 = load %173 : rec__IO_FILE*, align 8
                    %175 = get_global @.str.2 : s8i[2]*
                    %176 = cast(array_to_ptrdecay) %175 : s8i*
                    %177 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %178 = call @vfprintf(%174, %176, %177) : s32i [all]
                    scope {
                        %179 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %180 = get_global @stdout : rec__IO_FILE**
                        %181 = load %180 : rec__IO_FILE*, align 8
                        %182 = get_global @.str.2 : s8i[2]*
                        %183 = cast(array_to_ptrdecay) %182 : s8i*
                        %184 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %185 = call @vfprintf(%181, %183, %184) : s32i [all]
                        %186 = const 1 : s32i
                        %187 = cmp ne %185, %186 : bool
                        if %187 {
                            %188 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 3 {
                    %155 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %156 = get_global @stdout : rec__IO_FILE**
                    %157 = load %156 : rec__IO_FILE*, align 8
                    %158 = get_global @.str.3 : s8i[1]*
                    %159 = cast(array_to_ptrdecay) %158 : s8i*
                    %160 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %161 = call @vfprintf(%157, %159, %160) : s32i [all]
                    scope {
                        %162 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %163 = get_global @stdout : rec__IO_FILE**
                        %164 = load %163 : rec__IO_FILE*, align 8
                        %165 = get_global @.str.3 : s8i[1]*
                        %166 = cast(array_to_ptrdecay) %165 : s8i*
                        %167 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %168 = call @vfprintf(%164, %166, %167) : s32i [all]
                        %169 = const 0 : s32i
                        %170 = cmp ne %168, %169 : bool
                        if %170 {
                            %171 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 4 {
                    %138 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %139 = get_global @stdout : rec__IO_FILE**
                    %140 = load %139 : rec__IO_FILE*, align 8
                    %141 = get_global @.str.4 : s8i[3]*
                    %142 = cast(array_to_ptrdecay) %141 : s8i*
                    %143 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %144 = call @vfprintf(%140, %142, %143) : s32i [all]
                    scope {
                        %145 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %146 = get_global @stdout : rec__IO_FILE**
                        %147 = load %146 : rec__IO_FILE*, align 8
                        %148 = get_global @.str.4 : s8i[3]*
                        %149 = cast(array_to_ptrdecay) %148 : s8i*
                        %150 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %151 = call @vfprintf(%147, %149, %150) : s32i [all]
                        %152 = const 5 : s32i
                        %153 = cmp ne %151, %152 : bool
                        if %153 {
                            %154 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 5 {
                    %121 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %122 = get_global @stdout : rec__IO_FILE**
                    %123 = load %122 : rec__IO_FILE*, align 8
                    %124 = get_global @.str.4 : s8i[3]*
                    %125 = cast(array_to_ptrdecay) %124 : s8i*
                    %126 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %127 = call @vfprintf(%123, %125, %126) : s32i [all]
                    scope {
                        %128 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %129 = get_global @stdout : rec__IO_FILE**
                        %130 = load %129 : rec__IO_FILE*, align 8
                        %131 = get_global @.str.4 : s8i[3]*
                        %132 = cast(array_to_ptrdecay) %131 : s8i*
                        %133 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %134 = call @vfprintf(%130, %132, %133) : s32i [all]
                        %135 = const 6 : s32i
                        %136 = cmp ne %134, %135 : bool
                        if %136 {
                            %137 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 6 {
                    %104 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %105 = get_global @stdout : rec__IO_FILE**
                    %106 = load %105 : rec__IO_FILE*, align 8
                    %107 = get_global @.str.4 : s8i[3]*
                    %108 = cast(array_to_ptrdecay) %107 : s8i*
                    %109 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %110 = call @vfprintf(%106, %108, %109) : s32i [all]
                    scope {
                        %111 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %112 = get_global @stdout : rec__IO_FILE**
                        %113 = load %112 : rec__IO_FILE*, align 8
                        %114 = get_global @.str.4 : s8i[3]*
                        %115 = cast(array_to_ptrdecay) %114 : s8i*
                        %116 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %117 = call @vfprintf(%113, %115, %116) : s32i [all]
                        %118 = const 1 : s32i
                        %119 = cmp ne %117, %118 : bool
                        if %119 {
                            %120 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 7 {
                    %87 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %88 = get_global @stdout : rec__IO_FILE**
                    %89 = load %88 : rec__IO_FILE*, align 8
                    %90 = get_global @.str.4 : s8i[3]*
                    %91 = cast(array_to_ptrdecay) %90 : s8i*
                    %92 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %93 = call @vfprintf(%89, %91, %92) : s32i [all]
                    scope {
                        %94 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %95 = get_global @stdout : rec__IO_FILE**
                        %96 = load %95 : rec__IO_FILE*, align 8
                        %97 = get_global @.str.4 : s8i[3]*
                        %98 = cast(array_to_ptrdecay) %97 : s8i*
                        %99 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %100 = call @vfprintf(%96, %98, %99) : s32i [all]
                        %101 = const 0 : s32i
                        %102 = cmp ne %100, %101 : bool
                        if %102 {
                            %103 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 8 {
                    %70 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %71 = get_global @stdout : rec__IO_FILE**
                    %72 = load %71 : rec__IO_FILE*, align 8
                    %73 = get_global @.str.5 : s8i[3]*
                    %74 = cast(array_to_ptrdecay) %73 : s8i*
                    %75 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %76 = call @vfprintf(%72, %74, %75) : s32i [all]
                    scope {
                        %77 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %78 = get_global @stdout : rec__IO_FILE**
                        %79 = load %78 : rec__IO_FILE*, align 8
                        %80 = get_global @.str.5 : s8i[3]*
                        %81 = cast(array_to_ptrdecay) %80 : s8i*
                        %82 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %83 = call @vfprintf(%79, %81, %82) : s32i [all]
                        %84 = const 1 : s32i
                        %85 = cmp ne %83, %84 : bool
                        if %85 {
                            %86 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 9 {
                    %53 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %54 = get_global @stdout : rec__IO_FILE**
                    %55 = load %54 : rec__IO_FILE*, align 8
                    %56 = get_global @.str.6 : s8i[4]*
                    %57 = cast(array_to_ptrdecay) %56 : s8i*
                    %58 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %59 = call @vfprintf(%55, %57, %58) : s32i [all]
                    scope {
                        %60 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %61 = get_global @stdout : rec__IO_FILE**
                        %62 = load %61 : rec__IO_FILE*, align 8
                        %63 = get_global @.str.6 : s8i[4]*
                        %64 = cast(array_to_ptrdecay) %63 : s8i*
                        %65 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %66 = call @vfprintf(%62, %64, %65) : s32i [all]
                        %67 = const 7 : s32i
                        %68 = cmp ne %66, %67 : bool
                        if %68 {
                            %69 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 10 {
                    %36 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                    %37 = get_global @stdout : rec__IO_FILE**
                    %38 = load %37 : rec__IO_FILE*, align 8
                    %39 = get_global @.str.7 : s8i[4]*
                    %40 = cast(array_to_ptrdecay) %39 : s8i*
                    %41 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %42 = call @vfprintf(%38, %40, %41) : s32i [all]
                    scope {
                        %43 = get_global @vfprintf : ((rec__IO_FILE*, s8i*, rec___va_list_tag*) -> s32i)*
                        %44 = get_global @stdout : rec__IO_FILE**
                        %45 = load %44 : rec__IO_FILE*, align 8
                        %46 = get_global @.str.7 : s8i[4]*
                        %47 = cast(array_to_ptrdecay) %46 : s8i*
                        %48 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %49 = call @vfprintf(%45, %47, %48) : s32i [all]
                        %50 = const 2 : s32i
                        %51 = cmp ne %49, %50 : bool
                        if %51 {
                            %52 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case default {
                    %35 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
            }
            yield
        }
        %32 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
        va_end %32
        %33 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_end %33
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    call @inner(%2) [all]
    %3 = const 1 : s32i
    call @inner(%3) [all]
    %4 = const 2 : s32i
    call @inner(%4) [all]
    %5 = const 3 : s32i
    call @inner(%5) [all]
    %6 = const 4 : s32i
    %7 = get_global @.str : s8i[6]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    call @inner(%6, %8) [all]
    %9 = const 5 : s32i
    %10 = get_global @.str.1 : s8i[7]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    call @inner(%9, %11) [all]
    %12 = const 6 : s32i
    %13 = get_global @.str.2 : s8i[2]*
    %14 = cast(array_to_ptrdecay) %13 : s8i*
    call @inner(%12, %14) [all]
    %15 = const 7 : s32i
    %16 = get_global @.str.3 : s8i[1]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    call @inner(%15, %17) [all]
    %18 = const 8 : s32i
    %19 = const 120 : s32i
    call @inner(%18, %19) [all]
    %20 = const 9 : s32i
    %21 = get_global @.str.1 : s8i[7]*
    %22 = cast(array_to_ptrdecay) %21 : s8i*
    call @inner(%20, %22) [all]
    %23 = const 10 : s32i
    %24 = const 0 : s32i
    call @inner(%23, %24) [all]
    %25 = const 0 : s32i
    store %25, %0
    %26 = load %0 : s32i
    return %26
}
